[tool.poetry]
name = "txexitmap"
version = "0.1.0"
description = ""
authors = ["Arturo Filastò <arturo@filasto.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twisted = "^22.10.0"
txtorcon = { git = "https://github.com/meejah/txtorcon.git", branch = "389.hang-getinfo" }
treq = "^22.2.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
